Improve desktop dependency selection